made the svg icon images all have a set height of 79px to prevent the icons from the bottom row misaligning the card body.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -83,6 +83,12 @@ p {
   border-radius: 15px;
 }
 
+.background-card img {
+  height: 79px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
 #work {
   background-color: hsl(15, 100%, 70%);
 }
